# dividend-tracker

./: .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE  README.md  TUTORIAL.md
data/: holdings.json
examples/: portfolio_symbols.csv  sample_dividends.csv  sample_holdings.csv
src/: analytics.rs  api.rs  config.rs  holdings.rs  main.rs  models.rs  notifications.rs  persistence.rs  projections.rs  tax.rs
tests/: test_add_command.rs  test_list_command.rs  test_project_command.rs  test_summary_command.rs  test_tax_commands.rs
tests/common/: mod.rs
