[package]
name = "dividend-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1.0"
# CSV file parsing
csv = "1.3"
# Precise decimal calculations for financial data
rust_decimal = { version = "1.33", features = ["serde-with-float"] }
# Terminal colors
colored = "2.0"
# Table formatting
tabled = "0.15"
