[package]
name = "dividend-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Dividend Tracker Team"]
description = "A comprehensive CLI tool for tracking dividend payments, managing stock holdings, and analyzing portfolio performance"
license = "MIT"
repository = "https://github.com/jpequegn/dividend-tracker"
keywords = ["finance", "dividends", "portfolio", "stocks", "cli"]
categories = ["command-line-utilities", "finance"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1.0"
# CSV file parsing
csv = "1.3"
# Precise decimal calculations for financial data
rust_decimal = { version = "1.33", features = ["serde-with-float"] }
rust_decimal_macros = "1.33"
# Terminal colors
colored = "2.0"
# Table formatting
tabled = "0.15"
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "blocking"] }
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Progress bars
indicatif = "0.17"
# Configuration management
config = "0.14"
toml = "0.8"
# Directory management
dirs = "5.0"
# UUID generation for calendar
uuid = { version = "1.6", features = ["v4"] }
# Temporary files for atomic writes
tempfile = "3.8"
